--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -6,7 +6,7 @@ jobs:
 
   build:
     name: Build
-    runs-on: ubuntu-latest
+    runs-on: appleboy/ssh-action@v1.0.3
     steps:
     - name: executing remote ssh commands using password
       uses: appleboy/ssh-action@v1.0.3
