--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -8,11 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-        
     - name: run commands
-      uses: appleboy/ssh-action@v1.0.3
+      uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.SSH_HOST }} # IP Address
         key: ${{ secrets.SSH_KEY }} # Public/private key of server
