--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -15,11 +15,10 @@ jobs:
         username: ${{ secrets.SSH_USERNAME }}
         password: ${{ secrets.SSH_PASSWORD }}
         port: ${{ secrets.PORT }}
-        script: whoami
-        # script: |
-        #     cd /home/ben/repos/birthday-website
-        #     git checkout main
-        #     git pull
-        #     cp index.html /var/www/isitbensbirthday.com/public_html/index.html
-        #     sudo /etc/init.d/apache2 restart
+        script: |
+            cd /home/ben/repos/birthday-website
+            git checkout main
+            git pull
+            cp index.html /var/www/isitbensbirthday.com/public_html/index.html
+            sudo /etc/init.d/apache2 restart
 
