--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -8,17 +8,27 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - name: executing remote ssh commands using password
+    - name: Get the newest version of the website
       uses: appleboy/ssh-action@v1.0.3
       with:
         host: ${{ secrets.SSH_HOST }}
         username: ${{ secrets.SSH_USERNAME }}
-        password: ${{ secrets.SSH_PASSWORD }}
+        password: ${{ secrets.SSH_KEY }}
         port: ${{ secrets.PORT }}
         script: |
-            cd /home/ben/repos/birthday-website
+            cd ${{HOST_SOURCE_DIR}}
             git checkout main
             git pull
-            cp index.html /var/www/isitbensbirthday.com/public_html/index.html
+            
+    - name: Deploy site
+      uses: appleboy/ssh-action@v1.0.3
+      with:
+        host: ${{ secrets.SSH_HOST }}
+        username: ${{ secrets.SSH_USERNAME }}
+        password: ${{ secrets.SSH_KEY }}
+        port: ${{ secrets.PORT }}
+        script: |
+            cd ${{HOST_SOURCE_DIR}}
+            cp ${{HOST_DESTINATION_DIR}}/index.html
             sudo /etc/init.d/apache2 restart
 
