--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -10,6 +10,9 @@ jobs:
     steps:
     - name: Get the newest version of the website
       uses: appleboy/ssh-action@v1.0.3
+      env:
+        HOST_SOURCE_DIR: ${{ HOST_SOURCE_DIR }}
+        HOST_DESTINATION_DIR: ${{ HOST_DESTINATION_DIR }}
       with:
         host: ${{ secrets.SSH_HOST }}
         username: ${{ secrets.SSH_USERNAME }}
@@ -22,13 +25,16 @@ jobs:
             
     - name: Deploy site
       uses: appleboy/ssh-action@v1.0.3
+      env:
+        HOST_SOURCE_DIR: ${{ HOST_SOURCE_DIR }}
+        HOST_DESTINATION_DIR: ${{ HOST_DESTINATION_DIR }}
       with:
         host: ${{ secrets.SSH_HOST }}
         username: ${{ secrets.SSH_USERNAME }}
         password: ${{ secrets.SSH_KEY }}
         port: ${{ secrets.PORT }}
         script: |
-            cd ${{HOST_SOURCE_DIR}}
-            cp ${{HOST_DESTINATION_DIR}}/index.html
+            cd $HOST_SOURCE_DIR
+            cp $HOST_DESTINATION_DIR/index.html
             sudo /etc/init.d/apache2 restart
 
