--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -18,7 +18,7 @@ jobs:
         password: ${{ secrets.SSH_KEY }}
         port: ${{ secrets.PORT }}
         script: |
-            cd ${{HOST_SOURCE_DIR}}
+            cd $HOST_SOURCE_DIR
             git checkout main
             git pull
             
