--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -17,6 +17,7 @@ jobs:
         username: ${{ secrets.SSH_USERNAME }}
         password: ${{ secrets.SSH_KEY }}
         port: ${{ secrets.PORT }}
+        envs: HOST_SOURCE_DIR
         script: |
             cd $HOST_SOURCE_DIR
             git checkout main
@@ -32,6 +33,7 @@ jobs:
         username: ${{ secrets.SSH_USERNAME }}
         password: ${{ secrets.SSH_KEY }}
         port: ${{ secrets.PORT }}
+        envs: HOST_SOURCE_DIR,HOST_DESTINATION_DIR
         script: |
             cd $HOST_SOURCE_DIR
             cp $HOST_DESTINATION_DIR/index.html
